# splicer

./: README.md
splicer-ai-agent/: .dockerignore  .env.example  .gitignore  .watchfilesignore  Dockerfile  README.md  langgraph.json  pyproject.toml  server.py
splicer-ai-agent/.cursor/rules/: rules.mdc
splicer-ai-agent/agent/: graph.py  state.py
splicer-ai-agent/agent/nodes/: check.py  clean.py  integrator.py  paster.py  planner.py  source.py  splice.py  target.py  wip.check_revisor.py  wip_revisor.py  wip_validator.py
splicer-ai-agent/components/: EX_repo_loader.py  github_mcp.py  memory.py  model.py  responses.py  tools.py
splicer-ai-agent/components/supabase/: client.py
splicer-ai-agent/components/system_prompts/: check_revisor_prompt.py  integrator_prompt.py  paster_prompt.py  planner_prompt.py  revisor_prompt.py  source_prompt.py  target_prompt.py  validator_prompt.py
splicer-frontend/: .env.example  .gitignore  App.tsx  README.md  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
splicer-frontend/.cursor/rules/: rule.mdc
splicer-frontend/components/: AnimatedAIChat.tsx  ChatMessage.tsx  ChatSidebar.tsx  ConfirmModal.tsx  ForkPublicRepoModal.tsx  Galaxy.css  Galaxy.tsx  Header.tsx  MigrationStreamMessage.tsx  RateLimitModal.tsx  RepoPicker.tsx  ShinyText.tsx  SplicerInfoModal.tsx  UserRateLimitModal.tsx  WebContainer.tsx
splicer-frontend/content/: splicerInfo.ts
splicer-frontend/hooks/: useAgentStream.ts  useTypingAnimation.ts
splicer-frontend/lib/: supabaseClient.ts
splicer-frontend/pages/: LandingPage.tsx  MainPage.tsx
splicer-frontend/supabase/functions/agent/: index.ts
splicer-frontend/supabase/functions/fork-public-repo/: index.ts
splicer-frontend/supabase/functions/generate-title/: index.ts
splicer-frontend/supabase/functions/github-callback/: index.ts
splicer-frontend/supabase/functions/github-installation-token/: index.ts
splicer-frontend/supabase/functions/github-repos/: index.ts
splicer-webcontainer/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
splicer-webcontainer/infrastructure/terraform/: .gitignore  README.md  dns.tf  load_balancer.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
splicer-webcontainer/scripts/: build.sh  deploy.sh  setup-subdomain-routing.sh
splicer-webcontainer/src/: __init__.py  config.py  main.py
splicer-webcontainer/src/api/: __init__.py
splicer-webcontainer/src/api/routes/: __init__.py  health.py  preview.py  sessions.py
splicer-webcontainer/src/db/: __init__.py  client.py  models.py
splicer-webcontainer/src/services/: __init__.py  github_client.py  process_manager.py  proxy.py  session_manager.py  workspace_manager.py
splicer-webcontainer/src/utils/: __init__.py  logging.py  security.py
splicer-webcontainer/tests/: __init__.py  conftest.py  test_api.py  test_process_manager.py  test_security.py  test_subdomain_routing.py  test_workspace.py
(+4 files in other folders)
