[project]
name = "splicer"
version = "0.0.1"
description = "Code Migration Agent"
authors = [
    { name = "Adam Blackman" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.2.1",
    "langsmith",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-community>=0.4.1",
    "supabase>=2.27.2",
    "pytest-dotenv>=0.5.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent", "components"] 

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.7",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test (requires real API access)",
    "timeout: set timeout for test execution",
]
